--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
      <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyDNtLPvkDbCXCZ0kW9PXZllnwXkY6ktAFA",
-        authDomain: "car-racing-game-d4dc6.firebaseapp.com",
-        databaseURL: "https://car-racing-game-d4dc6.firebaseio.com",
-        projectId: "car-racing-game-d4dc6",
-        storageBucket: "car-racing-game-d4dc6.appspot.com",
-        messagingSenderId: "792751700307",
-        appId: "1:792751700307:web:8d27b172b534246710c9a6"
+        apiKey: yourkey,
+        authDomain: yourauth,
+        databaseURL: databseurl,
+        projectId: cprojectid,
+        storageBucket: storage,
+        messagingSenderId: some id I forgot,
+        appId: self explainable
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
