--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <script src="p5.min.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
@@ -8,26 +8,26 @@
     <script src="js/Game.js"></script>
     <script src="js/Player.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
-     <script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+    <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: yourkey,
-        authDomain: yourauth,
-        databaseURL: databseurl,
-        projectId: cprojectid,
-        storageBucket: storage,
-        messagingSenderId: some id I forgot,
-        appId: self explainable
+        apiKey: "=Your Key",
+        authDomain: "Your Auth",
+        databaseURL: "Database URL",
+        projectId: "Project ID",
+        storageBucket: "Storage",
+        messagingSenderId: "some id I forgot",
+        appId: "self explainable",
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-    
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-</head>
-<body>
-  <script src="sketch.js"></script>
-</body>
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  </body>
 </html>
